[package]
name = "edcert-revokeserver"
version = "0.1.0"
authors = ["Marvin Böcker <marvin.boecker@tu-dortmund.de>"]

description = "Use this with the crate edcert. This server can be queried if a certificate has been revoked."
repository = "https://github.com/zombiemuffin/edcert-revokeserver"
readme = "README.md"
keywords = ["ed25519", "crypto", "cryptography", "security", "edcert"]
license = "MIT"

[dependencies]

num_cpus = "0.2"
threadpool = "1.0"
